# crewai_automate_linkedin_posts

./: .gitignore  README.md  crewai_flow.html  pyproject.toml  requirements.txt
app/: main.py  router.py
app/models/: content_models.py  extraction_models.py  flow_models.py  linkedin_models.py
app/routers/: __init__.py  content_router.py  extraction_router.py  flows_router.py  linkedin_router.py
app/services/: content_service.py  extraction_service.py  flow_service.py  linkedin_service.py  writing_style_service.py
src/automate_linkedin_posts/: main.py
src/automate_linkedin_posts/config/: writing_styles.yaml
src/automate_linkedin_posts/crews/content_crew/: content_crew.py
src/automate_linkedin_posts/crews/content_crew/config/: agents.yaml  tasks.yaml
src/automate_linkedin_posts/crews/extraction_crew/: extraction_crew.py
src/automate_linkedin_posts/crews/extraction_crew/config/: agents.yaml  tasks.yaml
src/automate_linkedin_posts/crews/research_crew/: research_crew.py
src/automate_linkedin_posts/crews/research_crew/config/: agents.yaml  tasks.yaml
