[project]
name = "automate_linkedin_posts"
version = "0.1.0"
description = "automate_linkedin_posts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "automate_linkedin_posts.main:kickoff"
plot = "automate_linkedin_posts.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
